# spice-gtk

./: .gitignore  .gitlab-ci.yml  .gitmodules  .gitpublish  .mailmap  AUTHORS  Makefile.am  Makefile.flexVDI  NEWS  README  THANKS  TODO  autogen.sh  build-appimage.sh  configure.ac  spice-client-glib-2.0.pc.in  spice-client-glib.pc.in  spice-client-gtk-2.0.pc.in  spice-client-gtk-3.0.pc.in  spice-client-gtk.pc.in  spice.proto  spice1.proto  spice_codegen.py
common/: Makefile.am  canvas_base.c  canvas_base.h  canvas_utils.c  canvas_utils.h  gdi_canvas.c  gl_canvas.c  lines.c  lz.c  lz.h  macros.h  marshaller.c  marshallers.h  mem.c  mem.h  messages.h  pixman_utils.c  quic.c  quic.h  quic_family_tmpl.c  ring.h  rop3.c  rop3.h  ssl_verify.c  ssl_verify.h  sw_canvas.c  sw_canvas.h
data/: Makefile.am  org.spice-space.lowlevelusbaccess.policy  org.spicespace.spicy.json  spice-protocol.vapi  spicy-for-windows.nsis  spicy.nsis.in
doc/reference/: .gitignore  Makefile.am  spice-gtk-docs.xml  spice-gtk-sections.txt  spice-gtk.types
gtk/: .gitignore  Makefile.am  Makefile.flexVDI  Makefile.flexVDI.in  README  bio-gio.c  bio-gio.h  channel-base.c  channel-cursor.c  channel-cursor.h  channel-display-mjpeg.c  channel-display-priv.h  channel-display.c  channel-display.h  channel-inputs.c  channel-inputs.h  channel-main.c  channel-main.h  channel-playback-priv.h  channel-playback.c  channel-playback.h  channel-port.c  channel-record.c  channel-record.h  channel-smartcard.c  channel-smartcard.h  channel-usbredir-priv.h  channel-usbredir.c  channel-usbredir.h  channel-webdav.c  continuation.c  continuation.h  coroutine.h  coroutine_gthread.c  coroutine_ucontext.c  coroutine_winfibers.c  decode-glz-tmpl.c  decode-glz.c  decode-jpeg.c  decode-zlib.c  (+96 more)
gtk/controller/: Makefile.am  controller.vala  custom.vapi  dump.c  foreign-menu.vala  menu.vala  namedpipe.c  namedpipe.h  namedpipeconnection.c  namedpipelistener.c  spice-controller-listener.c  spice-foreign-menu-listener.c  test.c  win32-util.c
gtk/display/: gnome-rr-config.c  gnome-rr-config.h  gnome-rr-private.h  gnome-rr-windows.c  gnome-rr-x11.c  gnome-rr.c  gnome-rr.h
gtk/gusb/: README.txt  gusb-context.c  gusb-marshal.h  gusb-source.c
icons/flexvdi/: index.theme
m4/: spice-compile-warnings.m4
man/: spice-client.pod
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  fr.po  it.po
python_modules/: .gitignore  Makefile.am  codegen.py  demarshal.py  marshal.py  ptypes.py  spice_parser.py
src/: Makefile.am  Makefile.flexVDI.in  bio-gio.c  channel-base.c  channel-cursor.c  channel-cursor.h  channel-display-gst.c  channel-display-mjpeg.c  channel-display-priv.h  channel-display.c  channel-display.h  channel-inputs.c  channel-inputs.h  channel-main.c  channel-main.h  channel-playback.c  channel-port.c  channel-port.h  channel-record.c  channel-record.h  channel-smartcard.c  channel-usbredir-priv.h  channel-usbredir.c  channel-webdav.c  continuation.h  coroutine.h  coroutine_gthread.c  decode-glz-tmpl.c  decode-glz.c  decode-jpeg.c  decode-zlib.c  desktop-integration.c  flexvdi_client_icon.h  gio-coroutine.c  giopipe.c  glib-compat.c  glib-compat.h  gtk-compat.h  keymaps.csv  map-file  (+67 more)
src/controller/: Makefile.am  dump.c  namedpipelistener.c  test.c
tests/: Makefile.am  coroutine.c  file-transfer.c  mock-acl-helper.c  pipe.c  session.c  test-port-forward.c  uri.c  usb-acl-helper.c  util.c
tools/: Makefile.am  Makefile.flexVDI.in  spice-cmdline.c  spicy-connect.c  spicy-screenshot.c  spicy-stats.c  spicy.c
vapi/: Makefile.am  spice-client-glib-2.0.vapi  spice-client-gtk-2.0.vapi  spice-client-gtk-3.0.vapi
